# crypto-basement-suite

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  benchmark.cpp  main.cpp  playground.hpp  types.hpp
src/cli/: CMakeLists.txt
src/cli/cmap-merge/: CMakeLists.txt  main.cpp
src/cli/cmap-squeeze/: CMakeLists.txt  main.cpp
src/cli/csv-converter/: CMakeLists.txt  main.cpp
src/cli/fear_and_greed/: CMakeLists.txt  main.cpp
src/cli/fibonacci/: CMakeLists.txt  main.cpp
src/cli/portfolio/: CMakeLists.txt  main.cpp  threading.hpp
src/cli/portfolio/chain/: algorand.hpp  bitcoin.hpp  cardano.hpp  hedera.hpp
src/cli/portfolio/cli/: cli.hpp
src/cli/portfolio/common/: configuration.hpp  share.cpp  share.hpp  short_scales.hpp
src/cli/portfolio/extensions/: btc-halving.cpp  btc-halving.hpp  cardano-registry-scanner.cpp  cardano-registry-scanner.hpp  moon.hpp
src/cli/portfolio/gui/: gui.cpp  gui.hpp  share-chart.cpp  share-chart.hpp
src/cli/portfolio/helpers/: colors.hpp  formatter.hpp
src/cli/portfolio/printers/: print-day-change.cpp  print-day-change.hpp  print-shares.cpp  print-shares.hpp  print-summary.cpp  print-summary.hpp  print-supply.cpp  print-supply.hpp
src/cli/portfolio/readers/: balances.hpp  wallets.hpp
src/cli/portfolio/storage/: storage.cpp  storage.hpp
src/common/: CMakeLists.txt  common.hpp  csv.hpp
src/indicators/: CMakeLists.txt  exponential-moving-average.hpp  exponential_moving_average.hpp  indicators.hpp  ma_convergence_divergence.hpp  moving-average.hpp  moving_average.hpp  moving_average_convergence_divergence.hpp  price_velocity.hpp  rate_of_change.hpp  relative_strength_index.hpp  stochastic_oscillator.hpp
src/libblockcypher/: CMakeLists.txt
src/libblockcypher/private/src/: api.hpp  balance.cpp
src/libblockcypher/public/includes/libblockcypher/v1/: balance.hpp
src/libblockfrost/: CMakeLists.txt
src/libblockfrost/examples/: CMakeLists.txt
src/libblockfrost/examples/01-libblockfrost-balance/: CMakeLists.txt  main.cpp
src/libblockfrost/private/src/: api.cpp  api.hpp  balance.cpp
src/libblockfrost/public/includes/libblockfrost/v0/: balance.hpp  options.hpp
src/libcoingecko/: CMakeLists.txt  api.hpp  price.cpp
src/libcoingecko/examples/: CMakeLists.txt
src/libcoingecko/examples/01-ping/: CMakeLists.txt  main.cpp
src/libcoingecko/examples/02-categories/: CMakeLists.txt  main.cpp
src/libcoingecko/examples/03-price/: CMakeLists.txt  main.cpp
src/libcoingecko/examples/04-coins-list/: CMakeLists.txt  main.cpp
src/libcoingecko/includes/coins/: price.hpp
src/libcoingecko/includes/libcoingecko/v3/: all.hpp  options.hpp  ping.hpp
src/libcoingecko/includes/libcoingecko/v3/categories/: list.hpp
src/libcoingecko/includes/libcoingecko/v3/coins/: list.hpp  markets.hpp  price.hpp  supported_vs_currencies.hpp
src/libcoingecko/includes/libcoingecko/v3/global/: global.hpp
src/libcoingecko/private/src/: api.cpp  api.hpp  global.cpp  list.cpp
src/libcoingecko/private/src/categories/: list.cpp
src/libcoingecko/private/src/coins/: markets.cpp
src/libcoingecko/private/src/simple/: price.cpp  supported_vs_currencies.cpp
src/libcoingecko/public/includes/libcoingecko/v3/: options.hpp
src/libcoingecko/public/includes/libcoingecko/v3/categories/: list.hpp
src/libcoingecko/public/includes/libcoingecko/v3/coins/: list.hpp  markets.hpp
src/libcoingecko/public/includes/libcoingecko/v3/global/: global.hpp
src/libcoingecko/public/includes/libcoingecko/v3/simple/: price.hpp  supported_vs_currencies.hpp  token_price.hpp
src/libcoingecko/src/: api.cpp  api.hpp  global.cpp  list.cpp  ping.cpp  price.cpp  supported_vs_currencies.cpp
src/libcoingecko/src/categories/: list.cpp
src/libcoingecko/src/simple/: price.cpp  supported_vs_currencies.cpp
src/model/: CMakeLists.txt  indicators.hpp  model.hpp  stub.hpp  tests.hpp  types.hpp
src/networking/: CMakeLists.txt  downloader.cpp  downloader.hpp  requests.cpp
src/networking/public/rest/: requests.hpp
